# prosense-obs-stitcher

./: .gitignore  .gitmodules  CMakeLists.txt  Synced_realtime_stitching_puzzle.txt  generate_blendmasks.pseudocode.txt  prosense-obs-stitcher.c  prosense-obs-stitcher.cpp
data/: frustum-stitcher.effect  pto-stitcher.effect
shaderEd_develProject/: frustumToEquirect.sprj
shaderEd_develProject/cpp_export/: CMakeLists.txt  frustumToEquirect.c  frustumToEquirect.cpp
shaderEd_develProject/cpp_export/cmake/: FindSDL2.cmake
shaderEd_develProject/shaders/: frustumToEquirect.glsl  frustumToEquirect.vert  viewTexture.frag  viewTexture.vert
testData/: calibration_viewfrusta.xml  calibration_viewfrusta_example.xml
